assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Poppins:wght@300&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #3a3a3a;
    font-family: Poppins, sans-serif;
}

/* Header */
header {
    background-color: #ffffff;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}

h1 {
    font-family: 'Poppins', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525;
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #ffffff;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main content */
main {

    flex: 1 0 auto;
    margin-top: 47px;
    overflow: auto;
    background-color: rgb(207, 245, 245);

}

#hero {
    height: 600px;
    width: 100%;
    background: url("../images/hero.webp") no-repeat center center/cover;

}

.container {
    display: flex;
    /* Use flexbox to arrange divs side by side */
}

.side-by-side {
    flex: 1;
    /* Distribute available space equally between the divs */
    padding: 20px;
    border: 1px solid #ccc;
    margin: 10px;
    box-sizing: border-box;
    font-size: 22px;
    font-weight: bold;
    text-align: justify;

}

.container {
    width: 100%;
    /* Set the container's width */
    max-width: 1200px;
    /* Set a maximum width if needed */
    margin: 0 auto;
    /* Center the container horizontally */
    text-align: center;
    /* Center the image horizontally within the container */

}

.container img {
    max-width: 100%;
    /* Make sure the image doesn't exceed its container's width */
    height: auto;
    /* Maintain the original aspect ratio of the image */
}

#mapsize {
    display: flex;
    justify-content: space-evenly;
    /* Horizontal centering */
    align-items: center;
    /* Vertical centering */

}

#map {
    display: flex;
    justify-content: center;
    /* Center horizontally */
    align-items: center;
    /* Center vertically */
    height: 100%;
    /* Set container height to viewport height */
    border-bottom: 20px;
    padding-bottom: 26px;
}

.side-by-side {
    border: none;

}

#photos img {
    width: 100%;
    line-height: 1em;
}

#photos {
    line-height: 0;
}

#form {
    display: grid;
    align-items: center;
    justify-content: center;
    /*margin: 50px;*/
    flex-direction: column;
    text-size-adjust: 340%;
    margin-top: 200px;
    width: 75%;
    margin-left: 250px;
    border-radius: 15px 50px;
    align-content: center;

}
input[type=text] {
    width: 100%;
    padding: 8px;
     margin: 8px 0;
    box-sizing: border-box;
    border-radius: 15px;
}
input[type=email] {
    width: 100%;  
    padding: 8px;
    margin: 8px 0;
    box-sizing: border-box;
    border-radius: 15px;
}
input[type=submit] {
    width: 100%;
    margin: 8px 0;
    box-sizing: border-box;
    border-radius: 25px;
}



/* Footer */
footer {
    background-color: teal;
}

#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: #3a3a3a;

}



@media screen and (min-width: 576px) {
    #photos {
        column-count: 2;
        column-gap: 0;

    }
    
        
}

@media screen and (min-width: 768px) {
    main {
        margin-top: 47px;
        overflow: auto;
    }

    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 250%;
        line-height: 75px;
        margin: 0 0.5rem;
    }

    #photos {
        column-count: 3;
    }
    

}




@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #3a3a3a;
    }

    #main {
        margin-top: 75px;
    }


    main {
        margin-top: 47px;
        overflow: auto;
    }

    #photos {
        column-count: 4;
    }
}
@media screen and (max-width:768px) {
    #form {
        display: grid;
        align-items: center;
        justify-content: center;
        /*margin: 50px;*/
        flex-direction: column;
        text-size-adjust: 240%;
        margin-top: 200px;
        width: 75%;
        margin-left: 25px;
        border-radius: 15px 50px;
        align-content: center;

    }
    

}

@media screen and (max-width:992px) {
    #form {
        display: grid;
        align-items: center;
        justify-content: center;
        /*margin: 50px;*/
        flex-direction: column;
        text-size-adjust: 340%;
        margin-top: 200px;
        width: 75%;
        margin-left: 25px;
        border-radius: 15px 50px;
        align-content: center;

    }
    .container {
        display: flex;
        flex-direction: column;
        text-align: center;
        
    }
}

